# OOASP

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  DOC.md  LICENSE  README.md  ooasp_configuration.lp  ooasp_configuration_wrong.lp  pyproject.toml  requirements.txt
asp_interactive_configuration/: DOC.md  README.md  pyproject.toml
asp_interactive_configuration/benchmarks/: benchmark.py  plot.py
asp_interactive_configuration/benchmarks/latest/: e16-c-ca-p.txt  e6-c-ca.txt  eA10-c-ca.txt  eA13-c-ca.txt  eA14-c-ca-p.txt  eA14-c-ca.txt  eA15-c-ca-p.txt  eA15-c-ca.txt  eA16-c-ca-p.txt  eA16-c-ca.txt  eA17-c-ca.txt  eA4-c-ca.txt  eA4-eB3-eC2-eD1-c-ca.txt  eA7-eC2-eD1-c-ca.txt  f10-c-ca.txt  f4-c-ca.txt  f5-c-ca-p.txt  f5-c-ca.txt  f5-rD1-c-ca.txt  f5-rS1-c-ca.txt  f6-c-ca.txt  rD0-e10-c-ca.txt  rD0-e10.txt  rD0-e12-c-ca.txt  rD0-e12.txt  rD0-e13-c-ca.txt  rD0-e14-c-ca.txt  rD0-e15-c-ca.txt  rD0-e16-c-ca.txt  rD0-e17-c-ca.txt  rD0-rS0-e10-c-ca.txt  rD0-rS0-e10.txt  rD0-rS0-e15-c-ca.txt  rD0-rS0-e17-c-ca.txt  rD0-rS1-e0.txt  rD0-rS2-e0.txt  rD0-rS3-e0.txt  rD0-rS4-e0-c.txt  rD0-rS4-e0.txt  rD2-e0-c-ca.txt  (+19 more)
asp_interactive_configuration/benchmarks/results/: extend_solve.json  incremental_basic.json  incremental_overshoot.json  incremental_overshoot_rack_double.json  incremental_rack_double.json  options.json  options_object.json  wagon_people.json  wagon_people_f.json  wagon_people_f_no_external.json  wagon_people_no_external.json
asp_interactive_configuration/benchmarks/results/backup/: inc_elem.json  inc_elem_overshoot.json  inc_elem_step_2.json  inc_elem_step_3.json  inc_elem_step_4.json
asp_interactive_configuration/benchmarks/results/basic/: extend_solve.json  incremental.json  options.json  options_basic.json
asp_interactive_configuration/benchmarks/results/defined/: extend_solve.json  incremental.json  options.json  options_object.json
asp_interactive_configuration/benchmarks/results/defined-os/: extend_solve.json  incremental.json  options.json
asp_interactive_configuration/benchmarks/results/elem/: inc_elem_step_3.json  inc_elem_step_5.json  inc_elem_step_6.json  inc_elem_step_7.json
asp_interactive_configuration/benchmarks/results/paper/: extend_solve.json  incremental.json  options.json  options_paper.json
asp_interactive_configuration/examples/basic/metro/: constraints.lp
asp_interactive_configuration/examples/defined/racks/: constraints.lp
asp_interactive_configuration/examples/metro/: constraints.lp  fconstraints.lp  fkb.lp  kb.lp
asp_interactive_configuration/examples/metro_small/: constraints.lp  fconstraints.lp  fkb.lp  kb.lp
asp_interactive_configuration/examples/paper/racks/: kb.lp
asp_interactive_configuration/examples/puzzles/: constraints.lp  kb.lp
asp_interactive_configuration/examples/racks/: constraints.lp  constraints_simple.lp  kb.lp
asp_interactive_configuration/ooasp/: config.py  interactive.py  kb.py  run.py  run_bm.py  settings.py  ui.py  utils.py
asp_interactive_configuration/ooasp/encodings/: ooasp.lp  ooasp_arity.lp  ooasp_aux_config.lp  ooasp_aux_kb.lp  ooasp_cautious_opt.lp  ooasp_check.lp  ooasp_check_user.lp  ooasp_guess.lp  ooasp_simple.lp  ooasp_symmetry.lp  ooasp_user_input.lp  test.lp  viz_config.lp  viz_kb.lp
asp_interactive_configuration/ooasp/encodings/encodings_basic/: ooasp_arity.lp  ooasp_aux_config.lp  ooasp_aux_kb.lp  ooasp_check.lp  ooasp_guess.lp  ooasp_symmetry.lp  ooasp_user_input.lp  viz_kb.lp
asp_interactive_configuration/ooasp/encodings_full/: __init__.py  ooasp_aux_config.lp  ooasp_check.lp
asp_interactive_configuration/ooasp/encodings_paper/: ooasp_check.lp  ooasp_guess.lp  ooasp_user_input.lp
asp_interactive_configuration/ooasp/encodings_simple/: ooasp.lp  ooasp_arity.lp  ooasp_aux_config.lp  ooasp_aux_kb.lp  ooasp_check.lp  ooasp_guess.lp  ooasp_symmetry.lp  ooasp_user_input.lp  viz_config.lp  viz_kb.lp
asp_interactive_configuration/ooasp/tests/: config_paper.py  heuristc.py  interactive.py  kb.py  test_config.py  test_config_paper.py  test_config_simple.py  test_correctness.py  test_heuristc.py  test_interactive.py  test_interactive_defined.py  test_interactive_paper.py  test_interactive_simple.py  test_kb.py  test_kb_defined.py  test_metro.py  test_performance.py  test_specialization.py  utils.py
asp_interactive_configuration/usage/: Configuration.ipynb  Interactive.ipynb  KB.ipynb  UI_metro.ipynb  UI_puzzles.ipynb  UI_racks.ipynb
benchmarks/: README.md  benchmark.py  benchmark_class.py  plot.py  (+1 more)
(+139 files in other folders)
