[tool.poetry]
name = "asp_interactive_configuration"
version = "0.1.2"
description = "project to develop an interactive asp-based configuration approach"
authors = ["gschennersie"]
packages = [
    { include = "ooasp" }
]

[tool.poetry.dependencies]
python = "^3.9"
graphviz = "^0.20"
pytest = "^7.1.2"
clingraph = ">=1.0.0"
Clorm = "^1.4.0"
ipywidgets = "^8.1.1"
pyperf = "^2.6.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
pillow = "^10.3.0"
fclingo = "0.1.1"
copier = "^9.0.1"
jinja2-time = "^0.2.0"
jupyterlab = "^4.0.10"
jupyterlab-widgets = "^3.0.9"
jupyterlab-pygments = "^0.2.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
autopep8 = "^2.0.4"
ipykernel = "^6.13.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.autopep8]
max_line_length = 120
ignore = []
in-place = true
recursive = true
agressive = 2
