[tool.poetry]
name = "asp_interactive_configuration"
version = "0.1.3"
description = "project to develop an interactive asp-based configuration approach"
authors = ["gschennersie"]
packages = [{ include = "ooasp" }]

[tool.poetry.dependencies]
python = "^3.9"
graphviz = "^0.20"
pytest = "^7.1.2"
clingraph = ">=1.0.0"
Clorm = "^1.4.0"
clinguin = "^2.1.1"
fastapi = "^0.115.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
autopep8 = "^2.0.4"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.autopep8]
max_line_length = 120
ignore = []
in-place = true
recursive = true
agressive = 2
